# wb-collector

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  append_dbs_tasks.py  append_dbw_tasks.py  append_fbs_tasks.py  append_pickup_tasks.py  check_beat_products.py  check_dbs_fields.py  check_dbs_yaml.py  check_dbw_yaml.py  check_fbs_api.py  check_fbs_beat.py  check_fbs_imports.py  check_fbs_imports2.py  check_fbs_schema.py  check_fbs_tasks.py  check_fbw_coverage.py  check_general_schemas.py  check_pickup_yaml.py  check_products_api.py  check_products_routes.py  check_products_schemas.py  check_tasks_location.py  check_tasks_products.py  check_users_schema.py  debug_app.py  debug_products.py  docker-compose.yml  entrypoint.sh  fix_campaigns_schema.py  fix_dbs_controller.py  fix_dbw_controller.py  fix_dbw_migration.py  fix_fbw_collector.py  fix_fbw_goods_method2.py  fix_fbw_goods_session.py  (+9 more)
docs/: API_METHODS.md  BACKUP.md  MONITORING.md  SCHEDULE.md  TESTING.md
monitoring/: loki-config.yml  prometheus.yml  promtail-config.yml
nginx/: nginx.conf
scripts/: _tmp_check_acceptance.py  _tmp_check_changes.py  _tmp_check_fields.py  _tmp_check_fields2.py  _tmp_check_fields3.py  _tmp_inspect_brands.py  _tmp_inspect_general.py  _tmp_inspect_products.py  _tmp_inspect_products_schemas.py  _tmp_test_db.py  _tmp_test_routes.py  backup.sh  check_schema_drift.py  check_servers.py  decode_token.py  inspect_analytics.py  inspect_bodies.py  inspect_chapter.py  inspect_chapters.py  inspect_fbw.py  inspect_params.py  inspect_promo2.py  inspect_promotion.py  inspect_reports.py  inspect_schemas.py  inspect_yaml.py  (+8 more)
(+602 files in other folders)
